--- a/package.json
+++ b/package.json
@@ -108,8 +108,7 @@
         "test:performance": "cd e2e-tests &&  jest -c ./jest.config.js --detectOpenHandles performance",
         "stylelint:fix": "stylelint \"./packages/*/src/**/*.s(a|c)ss\" --fix",
         "translate": "f () { npm exec --workspace=@deriv/translations -- npm run translate ;}; f",
-        "stylelint-check": "stylelint-config-prettier-check",
-        "prepare": "husky install"
+        "stylelint-check": "stylelint-config-prettier-check"
     },
     "dependencies": {
         "@apideck/better-ajv-errors": "^0.3.6",
