Add dotenv-webpack to bot-web-ui to fix Vercel build error

--- a/packages/bot-web-ui/package.json
+++ b/packages/bot-web-ui/package.json
@@ -69,7 +69,8 @@
         "svg-sprite-loader": "^6.0.11",
         "typescript": "^4.6.3",
         "webpack": "^5.81.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "dotenv-webpack": "^8.0.1"
     },
     "dependencies": {
         "@deriv-com/quill-ui": "1.24.4",
