--- a/packages/bot-web-ui/package.json
+++ b/packages/bot-web-ui/package.json
@@ -70,7 +70,9 @@
         "typescript": "^4.6.3",
         "webpack": "^5.81.0",
         "webpack-cli": "^5.1.4",
-        "dotenv-webpack": "^8.0.1"
+        "dotenv-webpack": "^8.0.1",
+        "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
+        "stylelint": "^13.13.1"
     },
     "dependencies": {
         "@deriv-com/quill-ui": "1.24.4",
