--- a/packages/bot-web-ui/package.json
+++ b/packages/bot-web-ui/package.json
@@ -72,7 +72,8 @@
         "webpack-cli": "^5.1.4",
         "dotenv-webpack": "^8.0.1",
         "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-        "stylelint": "^13.13.1"
+        "stylelint": "^13.13.1",
+        "stylelint-config-prettier": "^9.0.5"
     },
     "dependencies": {
         "@deriv-com/quill-ui": "1.24.4",
