Add stylelint-no-unsupported-browser-features to bot-web-ui to fix Vercel build error

--- a/packages/bot-web-ui/package.json
+++ b/packages/bot-web-ui/package.json
@@ -73,7 +73,8 @@
         "dotenv-webpack": "^8.0.1",
         "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
         "stylelint": "^13.13.1",
-        "stylelint-config-prettier": "^9.0.5"
+        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-no-unsupported-browser-features": "^5.0.1"
     },
     "dependencies": {
         "@deriv-com/quill-ui": "1.24.4",
