--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-    "routes": [{ "handle": "filesystem" }, { "src": "/(.*)", "dest": "/index.html" }]
+    "routes": [{ "handle": "filesystem" }, { "src": "/(.*)", "dest": "/index.html" }],
+    "rootDirectory": "packages/bot-web-ui",
+    "outputDirectory": "dist"
 }
